--- a/src/app/shared/layout/header/sidenav-list.html
+++ b/src/app/shared/layout/header/sidenav-list.html
@@ -1,6 +1,6 @@
 <!-- <mat-sidenav #sidenav> -->
   <mat-nav-list>
     <a href="#" mat-list-item>My Account</a>
-    <a href="#" mat-list-item>LogOut</a>
+    <a href="#" mat-list-item>Logout</a>
   </mat-nav-list>
 <!-- </mat-sidenav> -->
