--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -1,6 +1,6 @@
 <div class="page-start-point ">
   <div class="p-l-20 p-r-20 p-b-20">
-    <card-layout *ngIf="projectData" (onEdit)="editProject($event)" (onDelete)="deleteProject($event)" [projectDetails]="projectData" [disableEditDelete]="true"></card-layout>
+    <card-layout *ngIf="projectData" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="projectData" [disableEditDelete]="true"></card-layout>
     <div class="row">
       <div class="col-xs-3">
         <mat-form-field class="example-form-field border-input">
