--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -1,45 +1,45 @@
 <div class="page-start-point ">
-  <div class="p-l-20 p-r-20 p-b-20 min-height" >
-     <ng-container *ngIf="(materialDataLength == 0) && (projectWiseData==0)">
-       <div class=" wrapper-btn-center">
-          <div class="add-user-img global-store-image">
-                <img src="../../../assets/images/global-store.png" alt="BuildSupply_Logo">
-                  <div>
-                        <p>
-                          You haven't created any project yet. <br>
-                          Please create one to continue.
-                        </p>
-                  </div>
-                        <!-- <button  mat-raised-button  (click)="addUser()" class="main-background-color main-button color-white">
+  <div class="p-l-20 p-r-20 p-b-20 min-height">
+    <ng-container *ngIf="materialDataLength == 0 && projectWiseData.length">
+      <div class=" wrapper-btn-center">
+        <div class="add-user-img global-store-image">
+          <img src="../../../assets/images/global-store.png" alt="BuildSupply_Logo" />
+          <div>
+            <p>
+              You haven't created any project yet. <br />
+              Please create one to continue.
+            </p>
+          </div>
+          <!-- <button  mat-raised-button  (click)="addUser()" class="main-background-color main-button color-white">
                       Add First User
                     </button> -->
-              </div>
-         </div> 
-      </ng-container>
-    
+        </div>
+      </div>
+    </ng-container>
+
     <ng-container>
-    <div class="row"  *ngIf="materialDataLength > 0 || projectDataLength>0">
-      <div class="col-xs-6">
-        <a href="javascript:void(0)" (click)="setButtonName('materialWise')">
-          <button [class.active]="buttonName == 'materialWise'" class="color-black" mat-button>
-            Material Wise
-          </button>
-        </a>
+      <div class="row" *ngIf="materialDataLength > 0 || projectDataLength > 0">
+        <div class="col-xs-6">
+          <a href="javascript:void(0)" (click)="setButtonName('materialWise')">
+            <button [class.active]="buttonName == 'materialWise'" class="color-black" mat-button>
+              Material Wise
+            </button>
+          </a>
 
-        <a href="javascript:void(0)" (click)="setButtonName('projectWise')">
-          <button [class.active]="buttonName == 'projectWise'" class="color-black" mat-button>
-            Project Wise
+          <a href="javascript:void(0)" (click)="setButtonName('projectWise')">
+            <button [class.active]="buttonName == 'projectWise'" class="color-black" mat-button>
+              Project Wise
+            </button>
+          </a>
+        </div>
+        <div class="col-xs-6 text-right">
+          <button mat-raised-button (click)="createRfq()" class="main-background-color main-button color-white">
+            Create RFQ
           </button>
-        </a>
+        </div>
       </div>
-      <div class="col-xs-6 text-right">
-        <button mat-raised-button (click)="createRfq()" class="main-background-color main-button color-white">
-          Create RFQ
-        </button>
-      </div>
-    </div>
 
-    <!-- <mat-card>
+      <!-- <mat-card>
       <div class="row">
        
         <div class="right-pipe" style="width: 25%;">
@@ -61,17 +61,12 @@
       </div>
     </mat-card> -->
 
-    <div *ngIf="(buttonName === 'materialWise') ; else elseBlock">
-      <app-material-wise (materialDataLength)="materialShowDataLength($event)" [materialData]="globalStoreData"></app-material-wise>
-    </div>
-    <ng-template #elseBlock>
-      <app-project-wise *ngIf="projectWiseData.length" (projectDataLength)="projectShowDataLength($event)" [projectData]="projectWiseData"></app-project-wise>
-    </ng-template>
-
-     </ng-container>
-
-
+      <div *ngIf="buttonName === 'materialWise'; else elseBlock">
+        <app-material-wise (materialDataLength)="materialShowDataLength($event)" [materialData]="globalStoreData"></app-material-wise>
+      </div>
+      <ng-template #elseBlock>
+        <app-project-wise *ngIf="projectWiseData.length" (projectDataLength)="projectShowDataLength($event)" [projectData]="projectWiseData"></app-project-wise>
+      </ng-template>
+    </ng-container>
   </div>
-
- 
 </div>
