--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -3,14 +3,12 @@
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="row">
       <div class="col-sm-12">
-        <card-layout *ngIf="product" (onEdit)="editProject($event)" (onDelete)="deleteProject($event)"
-          [projectDetails]="product"></card-layout>
+        <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product"></card-layout>
       </div>
     </div>
     <div class="row p-t-10 p-b-10">
       <div class="col-sm-12">
-        <button (click)="showIndent()" mat-raised-button [disabled]="!materialForms.valid"
-          class="main-background-color main-button color-white pull-right">
+        <button (click)="showIndent()" mat-raised-button [disabled]="!materialForms.valid" class="main-background-color main-button color-white pull-right">
           Raise Indent
         </button>
       </div>
@@ -28,24 +26,22 @@
           <ng-container matColumnDef="Material Name">
             <th mat-header-cell *matHeaderCellDef>Material Name</th>
             <td mat-cell *matCellDef="let element">
-             <div class="limited-character global"  matTooltip=" {{ element.materialName }}">
-               {{ element.materialName }}
-             </div> 
-              </td>
+              <div class="limited-character global" matTooltip=" {{ element.materialName }}">
+                {{ element.materialName }}
+              </div>
+            </td>
           </ng-container>
 
           <!-- Name Column -->
           <ng-container matColumnDef="Estimated Quantity">
             <th mat-header-cell *matHeaderCellDef class="text-align-center">Estimated Quantity</th>
-            <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.estimatedQty }}
-              {{element.materialUnit}}</td>
+            <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.estimatedQty }} {{ element.materialUnit }}</td>
           </ng-container>
 
           <!-- Name Column -->
           <ng-container matColumnDef="Requested Quantity">
             <th mat-header-cell *matHeaderCellDef class="text-align-center">Requested Quantity</th>
-            <td mat-cell *matCellDef="let element" class="text-align-center"> {{ element.requestedQuantity }}
-              {{ element.materialUnit }}</td>
+            <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.requestedQuantity }} {{ element.materialUnit }}</td>
           </ng-container>
 
           <!-- Weight Column -->
@@ -54,8 +50,9 @@
 
             <td mat-cell *matCellDef="let element; let i = index" class="text-align-center">
               <mat-form-field [formGroupName]="i" class="border-input table-input">
-                <input matInput formControlName="quantity" type="number" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="Required Quantity" />
-              </mat-form-field> {{element.materialUnit}}
+                <input matInput formControlName="quantity" type="number" min="0" onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="Required Quantity" />
+              </mat-form-field>
+              {{ element.materialUnit }}
             </td>
           </ng-container>
 
@@ -64,16 +61,24 @@
             <th mat-header-cell *matHeaderCellDef>Required Date</th>
 
             <td mat-cell *matCellDef="let element; let i = index">
-              
               <mat-form-field [formGroupName]="i" class="border-input date-label-indent">
-                <span class="form-placeholder">{{ materialForms.controls.forms.value[i].dueDate | date: "dd-MMM-yyy"}}</span>
-                <input matInput hidden formControlName="dueDate" #ref [matDatepicker]="startDate" placeholder="Required Date"  (dateChange)="getStart(ref.value,i)"
-                  [min]="minDate" (focus)="startDate.open()" readonly />
+                <span class="form-placeholder">{{ materialForms.controls.forms.value[i].dueDate | date: "dd-MMM-yyy" }}</span>
+                <input
+                  matInput
+                  hidden
+                  formControlName="dueDate"
+                  #ref
+                  [matDatepicker]="startDate"
+                  placeholder="Required Date"
+                  (dateChange)="getStart(ref.value, i)"
+                  [min]="minDate"
+                  (focus)="startDate.open()"
+                  readonly
+                />
                 <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
                 <mat-datepicker #startDate></mat-datepicker>
               </mat-form-field>
             </td>
-
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -82,7 +87,6 @@
 
         <!-- end structure -->
         <!-- </div> -->
-
       </div>
     </form>
     <!-- end of first structure -->
