--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="col-sm-8 hidePoweredBy" *ngIf="mode === 'edit'">
           <form [formGroup]="poTerms">
-            <textarea formControlName="textArea" [innerHTML]="terms && terms.termsDesc" [froalaEditor]="froala" [(froalaModel)]="poTerms.textArea">Hello, Froala!</textarea>
+            <textarea formControlName="textArea" [innerHTML]="terms && terms.termsDesc" [froalaEditor]="froala" [(froalaModel)]="poTerms['textArea']">Hello, Froala!</textarea>
           </form>
         </div>
         <div class="col-sm-8 background-white-color border-radius parent">
