--- a/src/app/shared/dialogs/select-project/select-project.component.html
+++ b/src/app/shared/dialogs/select-project/select-project.component.html
@@ -1,56 +1,44 @@
 <section class="select-project">
+  <ng-container *ngIf="data; else noProjects">
+    <div class="select-project__title d-flex justify-content-between align-items-center">
+      <h1 mat-dialog-title class="mb-0">Project List</h1>
+      <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
 
-    <ng-container *ngIf="data?.length !== 0; else noProjects">
-        <div class="select-project__title d-flex justify-content-between align-items-center">
-            <h1 mat-dialog-title class="mb-0">Project List</h1>
-            <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
-                <span aria-hidden="true">×</span>
-            </button>
-        </div>
-        
-        <div mat-dialog-content>
-            <div class="select-project__lists">
-                <mat-radio-group aria-label="Select an option">
-    
-                    <mat-radio-button [value]="project.projectId" *ngFor="let project of data"
-                        (change)="radioChange($event)">
-    
-                        <div class="select-project__detail d-flex align-items-center">
-    
-                            <p class="mb-0 select-project__name">{{ project.projectName }}</p>
-                            <p class="mb-0 select-project__location d-flex align-items-center">
-                                <!-- <i class="material-icons mr-2">location_on</i> -->
-                                <img src="assets/images/location-icon.png" class="img-fluid mr-2" alt="Location Icon">
-                                <span>{{ project.addressLine1}}, {{ project.addressLine2 }}</span>
-                            </p>
-    
-                        </div>
-    
-                    </mat-radio-button>
-    
-                </mat-radio-group>
-    
+    <div mat-dialog-content>
+      <div class="select-project__lists">
+        <mat-radio-group aria-label="Select an option">
+          <mat-radio-button [value]="project.projectId" *ngFor="let project of data" (change)="radioChange($event)">
+            <div class="select-project__detail d-flex align-items-center">
+              <p class="mb-0 select-project__name">{{ project.projectName }}</p>
+              <p class="mb-0 select-project__location d-flex align-items-center">
+                <!-- <i class="material-icons mr-2">location_on</i> -->
+                <img src="assets/images/location-icon.png" class="img-fluid mr-2" alt="Location Icon" />
+                <span>{{ project.addressLine1 }}, {{ project.addressLine2 }}</span>
+              </p>
             </div>
+          </mat-radio-button>
+        </mat-radio-group>
+      </div>
+    </div>
+  </ng-container>
+
+  <ng-template #noProjects>
+    <div mat-dialog-content>
+      <div class="select-project__no-projects">
+        <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+
+        <div class="mx-auto text-center pt-4">
+          <img src="assets/images/project-background.png" alt="No projects available" class="img-fluid" />
+          <h5 class="mt-4">You haven't added any project yet.</h5>
+          <h5 class="mb-3">Please create one to continue.</h5>
+          <button (click)="addProject()" mat-raised-button class="main-background-color main-button color-white">Add First Project</button>
         </div>
-    </ng-container>
-
-    <ng-template #noProjects>
-        <div mat-dialog-content>
-            
-            <div class="select-project__no-projects">
-                <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-
-                <div class="mx-auto text-center pt-4">
-                    <img src="assets/images/project-background.png" alt="No projects available" class="img-fluid">
-                    <h5 class="mt-4">You haven't added any project yet.</h5>
-                    <h5 class="mb-3">Please create one to continue.</h5>
-                    <button (click)="addProject()" mat-raised-button class="main-background-color main-button color-white">Add First Project</button>
-                </div>
-            </div>
-        </div>
-    </ng-template>
-
-    
+      </div>
+    </div>
+  </ng-template>
 </section>
