Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -11,7 +11,7 @@
   <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
     <span class="mat-header-cell material" mat-sort-header="name">Material Name</span>
     <span class="mat-header-cell material" mat-sort-header="estimatedQty">Estimated Quantity</span>
-    <span class="mat-header-cell material" mat-sort-header="requestedQuantity">Requested Quantity</span>
+    <span class="mat-header-cell material" mat-sort-header="requestedQuantity">Indented Quantity</span>
     <span class="mat-header-cell material" mat-sort-header="requiredDate">Required Date</span>
     <span class="mat-header-cell material" mat-sort-header="availableQuantity">Available Stock</span>
   </section>
