--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -11,7 +11,7 @@
   <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
     <span class="mat-header-cell" mat-sort-header="name">Material Name</span>
     <span class="mat-header-cell" mat-sort-header="estimatedQuantity">Estimated Quantity</span>
-    <span class="mat-header-cell" mat-sort-header="requestedQuantity">Requested Quantity</span>
+    <span class="mat-header-cell" mat-sort-header="requestedQuantity">Indented Quantity</span>
     <span class="mat-header-cell" mat-sort-header="requiredDate">Required Date</span>
     <span class="mat-header-cell" mat-sort-header="availableQuantity">Available Stock</span>
   </section>
