--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -56,9 +56,9 @@
 
               <a href="javascript:void(0)" class="main-color p-l-15">
                 {{ project.defaultAddress.addressLine1 }}
-                <ng-container *ngIf="project.defaultAddress.addressLine2">, {{ project.defaultAddress.addressLine2 }}</ng-container>
-                <ng-container *ngIf="project.defaultAddress.city">, {{ project.defaultAddress.city }}</ng-container>
-                <ng-container *ngIf="project.defaultAddress.state">, {{ project.defaultAddress.state }}</ng-container>
+                <ng-container *ngIf="project.defaultAddress.addressLine2"> {{ project.defaultAddress.addressLine2 }}</ng-container>
+                <ng-container *ngIf="project.defaultAddress.city"> {{ project.defaultAddress.city }}</ng-container>
+                <ng-container *ngIf="project.defaultAddress.state"> {{ project.defaultAddress.state }}</ng-container>
                 <ng-container *ngIf="project.defaultAddress.pinCode"> {{ project.defaultAddress.pinCode }}</ng-container>
               </a>
             </mat-panel-title>
