--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -66,7 +66,10 @@
                       <span class="col-sm-2">
                         <div class="limited-character" matTooltip=" {{ material.materialName }}">{{ material.materialName }} <br /></div>
                       </span>
-                      <span class="col-sm-1"> {{ material.rfqMaterialQty }} </span>
+                      <span class="col-sm-1">
+                        {{ material.rfqMaterialQty }}
+                        <span class="p-l-5">{{ material.materialUnit }}</span>
+                      </span>
 
                       <span class="col-sm-9">
                         <div class="row align-items-center">
