--- a/src/app/shared/dialogs/selectPoApprover/selectPo.html
+++ b/src/app/shared/dialogs/selectPoApprover/selectPo.html
@@ -2,9 +2,7 @@
   <h1 mat-dialog-title>Select Purchase Order Approver</h1>
   <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" [(ngModel)]="selectedApprover">
     <div *ngFor="let approver of approverData">
-      <mat-radio-button class="example-radio-button" [value]="approver">
-        {{approver.firstName}}{{approver.lastName}}
-      </mat-radio-button>
+      <mat-radio-button class="example-radio-button" [value]="approver"> {{approver.firstName}} <span class="p-l-5">{{approver.lastName}}</span> </mat-radio-button>
       <mat-divider></mat-divider>
     </div>
   </mat-radio-group>
