top-header Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/layout/header/top-header/top-header.component.html
+++ b/src/app/shared/layout/header/top-header/top-header.component.html
@@ -31,7 +31,7 @@
 
     <div fxShow="true" fxHide.lt-md>
       <button mat-button [matMenuTriggerFor]="logIn">
-        <img class="img-circle" height="36" width="38" [src]="url || '../../../../assets/images/user-image.jpg'" alt="Test" />
+        <img class="img-circle" height="36" width="38" [src]="url || '../../../../assets/images/logo-profile-header.png'" alt="Test" />
         <span>
           {{userName}}
         </span>
