--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -29,9 +29,9 @@
               <ng-container *ngIf="mode != 'edit'; else editQuantity"> {{ material.fullfilmentDate|date: "dd-MMM-yyy" }}</ng-container>
               <ng-template #editQuantity>
                 <mat-form-field class="border-input  date-label date-button mat-form-field-padding" style="width: 77%;">
-                  <mat-label>Select Date</mat-label>
+                  <mat-label *ngIf="!inputDate.value">Select Date</mat-label>
                   <span class="form-placeholder">{{ poForms["controls"]["forms"]["controls"][m]["controls"]["fullfilmentDate"].value | date: "dd-MMM-yyy" }}</span>
-                  <input hidden matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" placeholde="Enter Date" (focus)="dueDate.open()" [min]="minDate" readonly />
+                  <input #inputDate hidden matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" placeholde="Enter Date" (focus)="dueDate.open()" [min]="minDate" readonly />
                   <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
                   <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
                 </mat-form-field>
