Indent Table made mat-expandable Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -268,7 +268,7 @@
                   Approved P.O.
                 </div>
                 <div class="col-xs-6 text-right">
-                  *GRN = Good Receive Note
+                  *GRN = Goods Receive Note
                 </div>
               </mat-panel-title>
             </mat-expansion-panel-header>
