gst % done Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -89,8 +89,14 @@
                 </ng-template>
               </span>
               <span class="mat-cell text-center">
-                <span *ngIf="mode != 'edit' && (purchaseOrder.materialIgst != 0) &&  (purchaseOrder.materialCgst == 0) && (purchaseOrder.materialSgst == 0) ; else editGst">{{ purchaseOrder.materialIgst }}</span>
-                 <span *ngIf="mode != 'edit' && (purchaseOrder.materialIgst != 0) &&  (purchaseOrder.materialCgst != 0) && (purchaseOrder.materialSgst != 0) ; else editGst">{{ purchaseOrder.materialCgst + purchaseOrder.materialSgst }}</span>
+                <span *ngIf="mode != 'edit'; else editGst">
+                  <span *ngIf="(purchaseOrder && (purchaseOrder.materialCgst == 0) && (purchaseOrder.materialSgst === 0))">
+                    {{ purchaseOrder.materialIgst }}
+                  </span>
+                  <span *ngIf="(purchaseOrder && (purchaseOrder.materialCgst != 0) && (purchaseOrder.materialSgst != 0))">
+                    {{ purchaseOrder.materialCgst + purchaseOrder.materialSgst }}
+                  </span>
+                  </span>
                 <ng-template #editGst>
                   <mat-form-field class="border-input width50Percent">
                     <input
