--- a/src/app/shared/dialogs/gstin-missing/gstin-missing.component.html
+++ b/src/app/shared/dialogs/gstin-missing/gstin-missing.component.html
@@ -1,21 +1,17 @@
 <div class="header-add-edit-dialog">
-    <h1 mat-dialog-title>Confirmation</h1>
-    <button type="button" class="close" (click)="close()" aria-label="Close">
-      <span aria-hidden="true">×</span>
-    </button>
+  <h1 mat-dialog-title>ADD GSTIN</h1>
+  <button type="button" class="close" (click)="close()" aria-label="Close">
+    <span aria-hidden="true">×</span>
+  </button>
 </div>
 <div mat-dialog-content class="padding-for-dialog-after-header">
-<p class="text-center">Go to Project Store and add GSTIN in your project</p>
+  <p class="text-center">Go to Project Store and add GSTIN in your project</p>
 </div>
-   
-<div mat-dialog-actions>
-    <a [routerLink]="['/']" >
-    <button
-      mat-raised-button 
-      class="main-background-color main-button color-white pull-right"
-    >
-      Project Store 
+
+<div class="col-xs-12 text-center">
+  <a [routerLink]="['/project-dashboard']">
+    <button (click)="close()" mat-raised-button class="main-background-color main-button color-white">
+      Project Store
     </button>
   </a>
-  </div>
 </div>
