--- a/src/app/shared/dialogs/gstin-missing/gstin-missing.component.html
+++ b/src/app/shared/dialogs/gstin-missing/gstin-missing.component.html
@@ -11,7 +11,7 @@
 <div class="col-xs-12 text-center">
   <a [routerLink]="['/project-dashboard']">
     <button (click)="close()" mat-raised-button class="main-background-color main-button color-white">
-      Project Store
+      View Project Store
     </button>
   </a>
 </div>
