--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -127,7 +127,7 @@
             </div>
           </mat-expansion-panel>
         </div> -->
-        <div *ngIf="poApprovalDetailsTemp && permissionObj.rfqFlag">
+        <div *ngIf="poApprovalDetailsTemp && permissionObj.poApprovalFlag">
           <mat-expansion-panel class="myPanel" [expanded]="true">
             <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
               <mat-panel-title>
