Video pop-up implemented Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -212,7 +212,9 @@
 
                     <div class="banner">
                         <div class="banner__image">
-                            <img src="assets/images/video-banner.png" alt="Video Banner" class="img-fluid" />
+                            <a href="javascript:void(0)" (click)="showVideo()">
+                                <img src="assets/images/video-banner.png" alt="Video Banner" class="img-fluid" />
+                            </a>
                         </div>
                     </div>
                 </div>
