--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -475,3 +475,7 @@
    border: 1px solid #81e212;
     background-color: #81e212  !important;
 }
+.buildsupply-material-video{
+  width: 100%;
+  height: 337px;
+}
