--- a/src/app/features/bom/bom-preview/bom-preview.component.html
+++ b/src/app/features/bom/bom-preview/bom-preview.component.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="col-xs-5 p-t-10">
                       <span class="pull-right text-semi-bold" *ngFor="let trades of subcategory.tradeList; let i = index">
-                        {{ trades }}<span *ngIf="i === subcategory.tradeList.length">,</span>
+                        <span class="p-r-5">{{ trades }}<span *ngIf="subcategory.tradeList.length > 1 && i !== 0">,</span> </span>
                         <!-- <mat-card class="mat-card-width p-l-10 p-r-10 p-t-5 p-b-5 font-size14 background-color-skyblue color-white" matTooltip="{{ trades }}">
                         <div class="limited-character global">
                           {{ trades }}
