Whatsapp link, Text changed and requested to Indented changed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -133,7 +133,7 @@
                             </mat-tab-group>
 
                             <div class="statistics__filter">
-                                <h5><img src="assets/images/filter.png" class="img-fluid mr-2" alt="filter" /> This Month</h5>
+                                <h5>This Month</h5>
                             </div>
                         </div>
                     </div>
