--- a/src/app/shared/layout/header/top-header/top-header.component.html
+++ b/src/app/shared/layout/header/top-header/top-header.component.html
@@ -6,14 +6,17 @@
     <span><img width="200" src="../../../../assets/images/loginLogo.png" alt="logo"/></span>
     <span class="menu-spacer"></span>
 
-    <div class="whatsapp-div-header">
-     <div>
-       <img src="../../../../assets/images/whatsapp-main.png" class="whatsapp-icon">
-     </div>
-     <div class="whatsapp-icon-number">
-       +91 8512060007
-     </div>
+ <a href="https://api.whatsapp.com/send?phone=+918512060007">
+   <div class="whatsapp-div-header">
+         <div>
+          <img src="../../../../assets/images/whatsapp-main.png" class="whatsapp-icon">
+        </div>
+        <div class="whatsapp-icon-number">
+          +91 8512060007
+        </div>
     </div>
+ </a>
+  
 
     <button class="pull-right p-t-10 notification-bell-icon" mat-button [matMenuTriggerFor]="notifs">
       <a href="javascript:void(0)" (click)="openDiv()">
