--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -37,8 +37,8 @@
               </ng-container>
 
               <!-- Name Column -->
-              <ng-container matColumnDef="Requested Date">
-                <th mat-header-cell *matHeaderCellDef>Requested Date</th>
+              <ng-container matColumnDef="Indented Date">
+                <th mat-header-cell *matHeaderCellDef>Indented Date</th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.createdAt | date: "dd-MMM-yyy" }}
                 </td>
@@ -116,8 +116,8 @@
                 </ng-container>
 
                 <!-- Name Column -->
-                <ng-container matColumnDef="Requested Date">
-                  <th mat-header-cell *matHeaderCellDef>Requested Date</th>
+                <ng-container matColumnDef="Indented Date">
+                  <th mat-header-cell *matHeaderCellDef>Indented Date</th>
                   <td mat-cell *matCellDef="let element">
                     {{ element.createdAt | date: "dd-MMM-yyy" }}
                   </td>
