--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -69,7 +69,8 @@ button.active {
 }
 .whatsapp-icon-number{
 font-size: 14px;
-padding-left:5px
+padding-left:5px;
+color: #000000 !important;
 }
 .whatsapp-div-header{
   display: flex;
