--- a/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
+++ b/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
@@ -130,7 +130,7 @@
         class="main-background-color main-button color-white pull-right"
       >
         <span *ngIf="!data.isEdit">Add</span>
-        <span *ngIf="data.isEdit">Edit</span>
+        <span *ngIf="data.isEdit">Save</span>
       </button>
     </div>
   </div>
