Add and Download Supplier excel sheet  in supplier screen blank Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -24,6 +24,20 @@
     min-width: 164px;
   }
 }
+
+.add-user-img.suppliers {
+  img {
+    margin-top: 0%;
+  }
+  div {
+    margin-top: 0px;
+  }
+  button {
+    min-width: 164px;
+  }
+}
+
+
 .add-user-img.global-store-image{
     img {
     margin-top: 0%;
