Annual Turnover text changed and rates regex chn Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -83,7 +83,7 @@
 
 
                   <mat-form-field class="border-select w-100" *ngIf="users.roleName === 'l1'">
-                  <mat-label>Select Turn Over</mat-label>
+                  <mat-label>Select Annual Turn Over</mat-label>
                   <mat-select formControlName="turnOverId">
                     <mat-option *ngFor="let turnOver of turnOverList" [value]="turnOver.turnOverId">
                       {{ turnOver.shortName }}
@@ -91,7 +91,7 @@
                   </mat-select>
                 </mat-form-field>
                  <mat-error *ngIf="userInfoForm.controls['turnOverId'].errors && (userInfoForm.controls['turnOverId'].dirty || userInfoForm.controls['turnOverId'].touched)">
-                  <mat-error *ngIf="userInfoForm.controls['turnOverId'].hasError('required')"> Turn 
+                  <mat-error *ngIf="userInfoForm.controls['turnOverId'].hasError('required')">Annual Turn 
                   over is required</mat-error>
                 </mat-error>
 
