RFQ, PO, RFQ Bids - Rates Gst Error Decimal Input Fields. Forgt pass - 6 min pass Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -77,11 +77,12 @@
                             <a>
                                 <mat-icon class="password-eye" (click)="showPassWord()">remove_red_eye</mat-icon>
                             </a>
+                               <small *ngIf="forgetPassForm.controls['password'].errors?.minlength && forgetPassForm.controls['password'].touched" class="signupForm-error-msg">Minimum characters required is 6</small>
                         </mat-form-field>
 
                       <div mat-dialog-actions class="col-xs-12 p-t-40">
                           <button mat-raised-button class="main-background-color main-button color-white m-b-5"
-                              cdkFocusInitial style="width: 100%;" [disabled]="!(pass.value.length > 0)" (click)="submitPass()">
+                              cdkFocusInitial style="width: 100%;" [disabled]="!(pass.value.length > 5)" (click)="submitPass()">
                               Submit</button>
                       </div>
                   </ng-container>
