IMT-652 Done Fixed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -115,6 +115,7 @@
                     <input
                       matInput
                       type="number"
+                      title="GST% must be valid"
                       placeholder="GST %"
                       [(ngModel)]="material.Igst"
                       min="0"
