IMT-653 Fixed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -157,6 +157,9 @@ input {
 .width50Percent {
   width: 50%;
 }
+.width78Percent{
+  width:78%;
+}
 
 .brand-view-style {
   background-color: $background-table-color-grey;
